# tauri-template

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: splashscreen.css  splashscreen.html
src/: main.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  .pre-commit-config.yaml  Cargo.toml  build.rs  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns  icon.sh
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/ipc/: app.rs  hello.rs  mod.rs
src/actions/: clipboard.ts  index.ts  reducer.ts  theme.ts
src/components/antd-ext/: config-provider.tsx  date-icker.tsx  dialog.tsx  icon.tsx  index.tsx  input.tsx  loading.tsx  pin-msg.tsx  tab.tsx  table.tsx
src/components/assistive-touch/: index.css  index.tsx  petal.tsx  types.ts
src/components/ctx-menu/: index.css  index.tsx
src/components/mac_window_controls/: index.css  index.tsx
src/components/models/: Pagination.ts  Response.tsx  global.d.ts
src/components/models/antd-ext/: index.ts
src/components/pages/home/: index.tsx
src/components/pages/profile/: index.tsx
src/components/pages/settings/: index.tsx
src/components/views/: 403.tsx  404.tsx  500.tsx
src/layout/: index.css  index.tsx  load-modules.tsx
src/layout/auth/: index.tsx
src/layout/redirect/: index.tsx
src/layout/routes/: index.tsx
src/layout/routes/modules/: error_page.tsx  pages.tsx
src/utility/: base64.ts  date.ts  files.ts  html.ts  icons.tsx  invoke.ts  redirect.ts  size_unit.ts  store.ts  uuid.ts
