[package]
edition = "2024"
version = "0.1.0"
readme = "README.md"
name = "tauri-template"
authors = ["Author <mail@qq.com>"]
description = "tauri template"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [
    "macos-private-api",
    "tracing",
    "devtools",
] }

tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"

[profile.release]
# rpath = false
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
